2008-09-04  Marek Safar  <marek.safar@gmail.com>

	* constant.cs: Better error reporting for decimal literals.
	
	* class.cs, attribute.cs, typemanager.cs: Emit more fixed buffer
	field attributes.
	
2008-09-04  Marek Safar  <marek.safar@gmail.com>
			Miguel de Icaza  <miguel@novell.com>

	A fix for bug #422951
	* assign.cs (Assign.DoResolve): Perform the type conversions
	checks before we attempt to initialize `New' initializers. 

2008-09-04  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #422853
	* delegate.cs (DelegateCreation): Add special handling for
	EmptyExpression.Null instance expression which is just another
	hack for undecided member instance exression.

2008-09-04  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, ecore.cs: Emit full expression tree for reduced
	binary expressions.

2008-09-04  Marek Safar  <marek.safar@gmail.com>

	* expression.cs (This): Guard against multi-resolving.
	
	* ecore.cs, statement.cs (Throw): Simplified.
	
	* flowanalysis.cs: Also verify event fields.

2008-09-04  Miguel de Icaza  <miguel@novell.com>

	* repl.cs (PrettyPrint): Add Hashtable prettyprint

	* anonymous.cs (AnonymousTypeClass): On EvalMode make the class
	public. 

	* repl.cs: Update help.

2008-09-03  Miguel de Icaza  <miguel@novell.com>

	* driver.cs (ProcessDefaultConfig): Now it encapsulates all the
	handling of the default config handling, including the special
	treatment of System.Core assembly. 

	Fixes the REPL processing for LINQ.

2008-09-03  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #422507
	* expression.cs (UnboxCast): Add missing child expression mutator.

2008-09-03  Marek Safar  <marek.safar@gmail.com>

	* driver.cs: Don't self reference System.Core assembly.

2008-09-03  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #422507
	* expression.cs (StringConcat): Add missing type mutator.

2008-09-03  Marek Safar  <marek.safar@gmail.com>

	* generic.cs (TypeInferenceContext): Follow equality rule for